[common] rollback context
