# avatar/avatar.swagger.json
@@ -261,8 +261,15 @@
           "type": "string",
           "format": "byte"
         },
+        "node": {
+          "type": "string"
+        },
+        "reply_topic": {
+          "type": "string"
+        },
         "credential": {
-          "$ref": "#/definitions/authCredential"
+          "$ref": "#/definitions/authCredential",
+          "title": "optional int32 reply_partition = 5;"
         },
         "tracing": {
           "type": "string",
@@ -273,6 +280,25 @@
         },
         "by_device": {
           "$ref": "#/definitions/commonDevice"
+        },
+        "topic": {
+          "type": "string",
+          "title": "for kafka"
+        },
+        "partition": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "offset": {
+          "type": "string",
+          "format": "int64"
+        },
+        "term": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "router_topic": {
+          "type": "string"
         },
         "idempotency_key": {
           "type": "string"
